# dogs-vs-cats

./: README.md  pyproject.toml
core/: dataset.py  train.py
